tests/snapshots/cli__main_string.snap
---
source: tests/cli.rs
expression: "formatdoc! { \"\n        STDOUT\n        {out}\n        STDERR\n        {err}\" }"
---
STDOUT
hello
world

STDERR
