tests/snapshots/cli__run_file@Invalid.gleam.snap
---
source: tests/cli.rs
expression: "formatdoc!\n{\n    \"\n            STDOUT\n            {out}\n            STDERR\n            {err}\"\n}"
input_file: tests/inputs/Invalid.gleam
---
STDOUT

STDERR
warning: Invalid module name

Module names must begin with a lowercase letter and contain
only lowercase alphanumeric characters or underscores.
Hint: Rename `/src/Invalid.gleam` to be valid, or remove this file from the project source.
