tests/snapshots/cli__run_file@check_approx.gleam.snap
---
source: tests/cli.rs
expression: "formatdoc!\n{\"\n            STDOUT\n            {out}\n            STDERR\n            {err}\"}"
input_file: tests/inputs/check_approx.gleam
---
STDOUT

STDERR
error: Module does not have a main function

`tests/inputs/check_approx` does not have a main function so the module can not be run.
Hint: Add a public `main` function to `src/tests/inputs/check_approx.gleam`.
