tests/snapshots/cli__run_file@check_true_false.gleam.snap
---
source: tests/cli.rs
expression: "formatdoc!\n{\n    \"\n            STDOUT\n            {out}\n            STDERR\n            {err}\"\n}"
input_file: tests/inputs/check_true_false.gleam
---
STDOUT

STDERR
error: Module does not have a main function

`check_true_false` does not have a main function so the module can not be run.
Hint: Add a public `main` function to to `src/check_true_false.gleam`.
