tests/snapshots/cli__run_file@gleam.gleam.snap
---
source: tests/cli.rs
expression: "format!(\"STDOUT\\n{out}\\nSTDERR\\n{err}\")"
input_file: tests/inputs/gleam.gleam
---
STDOUT

STDERR
gleam: is a reserved module name.
