tests/snapshots/cli__run_file@main_list_string.gleam.snap
---
source: tests/cli.rs
expression: "formatdoc!\n{\n    \"\n            STDOUT\n            {out}\n            STDERR\n            {err}\"\n}"
input_file: tests/inputs/main_list_string.gleam
---
STDOUT


STDERR
