tests/snapshots/cli__run_file@main_nil_int.gleam.snap
---
source: tests/cli.rs
expression: "formatdoc!\n{\n    \"\n            STDOUT\n            {out}\n            STDERR\n            {err}\"\n}"
input_file: tests/inputs/main_nil_int.gleam
---
STDOUT
123

STDERR
