tests/snapshots/cli__run_file@main_panic.gleam.snap
---
source: tests/cli.rs
expression: "format!(\"STDOUT\\n{out}\\nSTDERR\\n{err}\")"
input_file: tests/inputs/main_panic.gleam
---
STDOUT
Error at main_panic.main:2
  `panic` expression evaluated.

STDERR
